--- a/package.json
+++ b/package.json
@@ -19,32 +19,36 @@
     "docker:logs": "docker-compose logs -f backend",
     "db:migrate": "node scripts/migrate.js"
   },
-  "keywords": ["military", "headquarters", "usa"],
+  "keywords": [
+    "military",
+    "headquarters",
+    "usa"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.3",
-    "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
-    "nodemailer": "^6.9.1",
-    "mongoose": "^7.0.3",
-    "jsonwebtoken": "^9.0.2",
-    "validator": "^13.11.0",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "uuid": "^9.0.1",
     "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.12",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0"
+    "eslint-plugin-import": "^2.29.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
+    "supertest": "^6.3.3"
   }
 }
