--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.12",
+    "twilio": "^5.12.1",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
@@ -49,6 +50,7 @@
     "eslint-plugin-import": "^2.29.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.11",
-    "supertest": "^6.3.3"
+    "request": "^2.88.2",
+    "supertest": "^6.3.4"
   }
 }
